# inkwell

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Makefile  Procfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_05_13_1200-a1b2c3d4e5f6_create_documents_feedbacks_rewrites.py  2026_05_15_1200-b2c3d4e5f6a7_add_grammar_checks_paraphrases.py  2026_05_16_1200-c3d4e5f6a7b8_add_users_and_user_ownership.py  2026_05_17_1200-d4e5f6a7b8c9_add_google_oauth_fields.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  documents.py  feedback.py  google_auth.py  grammar.py  health.py  paraphrase.py  rewrites.py  router.py
backend/app/core/: limiter.py  logging.py  sse.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  document.py  feedback.py  grammar_check.py  paraphrase.py  rewrite.py  user.py
backend/app/schemas/: documents.py  feedback.py  grammar.py  health.py  paraphrase.py  rewrite.py  users.py
backend/app/services/: auth_service.py  feedback_service.py  google_oauth.py  grammar_service.py  paraphrase_service.py  persistence.py  rewrite_service.py  token_service.py
backend/app/services/llm/: __init__.py  anthropic_client.py  base.py  fakes.py  schemas.py
backend/tests/: conftest.py  test_anthropic_client.py  test_auth.py  test_cors.py  test_google_auth.py  test_health.py  test_llm_fakes.py
backend/tests/api/: conftest.py  test_feedback_endpoint.py  test_grammar_endpoint.py  test_rewrites_endpoint.py
backend/tests/db/: test_persistence.py
backend/tests/services/: test_feedback_service.py  test_grammar_service.py  test_rewrite_service.py
frontend/: .env.local.example  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts  proxy.ts
(+38 files in other folders)
