[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15",
    "anthropic>=0.100.0",
    "asyncpg>=0.30",
    "bcrypt>=4.1.0",
    "fastapi>=0.136.1",
    "psycopg[binary]>=3.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "PyJWT>=2.8.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.46.0",
    "slowapi>=0.1.9",
    "joserfc>=1.0",
    "itsdangerous>=2.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "testcontainers[postgres]>=4.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modernize syntax)
    "B",      # bugbear (common bug patterns)
    "SIM",    # simplify
    "RUF",    # ruff-specific
]
ignore = ["E501"]  # line length is handled by formatter, not linter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
